[gd_scene load_steps=28 format=2]

[ext_resource path="res://Throwables/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Assets/explosion/expl_01_0016.png" type="Texture" id=2]
[ext_resource path="res://Assets/explosion/expl_01_0013.png" type="Texture" id=3]
[ext_resource path="res://Assets/explosion/expl_01_0019.png" type="Texture" id=4]
[ext_resource path="res://Assets/explosion/expl_01_0009.png" type="Texture" id=5]
[ext_resource path="res://Assets/explosion/expl_01_0010.png" type="Texture" id=6]
[ext_resource path="res://Assets/explosion/expl_01_0007.png" type="Texture" id=7]
[ext_resource path="res://Assets/explosion/expl_01_0022.png" type="Texture" id=8]
[ext_resource path="res://Assets/explosion/expl_01_0023.png" type="Texture" id=9]
[ext_resource path="res://Assets/explosion/expl_01_0015.png" type="Texture" id=10]
[ext_resource path="res://Assets/explosion/expl_01_0004.png" type="Texture" id=11]
[ext_resource path="res://Assets/explosion/expl_01_0011.png" type="Texture" id=12]
[ext_resource path="res://Assets/explosion/expl_01_0020.png" type="Texture" id=13]
[ext_resource path="res://Assets/explosion/expl_01_0000.png" type="Texture" id=14]
[ext_resource path="res://Assets/explosion/expl_01_0005.png" type="Texture" id=15]
[ext_resource path="res://Assets/explosion/expl_01_0021.png" type="Texture" id=16]
[ext_resource path="res://Assets/explosion/expl_01_0003.png" type="Texture" id=17]
[ext_resource path="res://Assets/explosion/expl_01_0006.png" type="Texture" id=18]
[ext_resource path="res://Assets/explosion/expl_01_0018.png" type="Texture" id=19]
[ext_resource path="res://Assets/explosion/expl_01_0001.png" type="Texture" id=20]
[ext_resource path="res://Assets/explosion/expl_01_0014.png" type="Texture" id=21]
[ext_resource path="res://Assets/explosion/expl_01_0017.png" type="Texture" id=22]
[ext_resource path="res://Assets/explosion/expl_01_0012.png" type="Texture" id=23]
[ext_resource path="res://Assets/explosion/expl_01_0008.png" type="Texture" id=24]
[ext_resource path="res://Assets/explosion/expl_01_0002.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 20 ), ExtResource( 25 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 7 ), ExtResource( 24 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 23 ), ExtResource( 3 ), ExtResource( 21 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 120.0

[node name="Explosion" type="Area2D"]
script = ExtResource( 1 )

[node name="ExplosionAnimation" type="AnimatedSprite" parent="."]
position = Vector2( -1.85019, -5.03968 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
speed_scale = 3.0

[node name="CollisionArea" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="ExplosionAnimation" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
